# Elonef-chat

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: devbuild.yml
client/: CMakeLists.txt  main.cpp
client/include/elonef-chat/: arg_parser.hpp  client.hpp  hash.hpp  io.hpp  login.hpp  nameAliassing.hpp  subcommands.hpp
client/include/elonef-chat/display/: box.hpp  ralign.hpp  render.hpp  size.hpp
client/src/: argparser.cpp  client.cpp  hash.cpp  io.cpp  login.cpp  nameAliassing.cpp  subcommands.cpp
client/src/display/: box.cpp  ralign.cpp  render.cpp  size.cpp
libs/: CMakeLists.txt
server/: CMakeLists.txt  main.cpp
server/include/elonef-chat/: createTables.hpp  database.hpp  server.hpp
server/src/: createTables.cpp  database.cpp  server.cpp
shared/: CMakeLists.txt
shared/include/elonef-chat/: chat.hpp
shared/src/: chat.cpp
